// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Support /> should render correctly - index 1`] = `
.c2 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c7 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 100%;
  height: 10rem;
  margin-bottom: 1.2rem;
}

.c8 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg,rgb(238,238,238),rgb(245,245,245),rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: eflhBg 3.5s ease-in-out infinite;
  animation: eflhBg 3.5s ease-in-out infinite;
}

.c3 {
  margin: 2.3rem 0 0 0;
}

.c1 {
  -webkit-animation: eTsntO 0.4s ease-in-out;
  animation: eTsntO 0.4s ease-in-out;
}

.c5 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
  cursor: default;
}

.c5:focus-within,
.c5:focus {
  outline: none !important;
}

.c5:focus-within::after,
.c5:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #007dfa3C 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c5:focus,
.c5:hover {
  background-color: #004F8C;
  color: white;
}

.c5:active {
  background-color: #003E6F;
  color: white;
}

.c5:disabled {
  background-color: #cdcdd7;
  color: #646464;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  padding-bottom: 2rem;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c4 {
  width: 100%;
  margin-top: 2rem;
  margin-bottom: 1rem;
}

@media (prefers-color-scheme:dark) {
  .c7 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c8 {
    background-image: linear-gradient( 90deg,rgb(17,17,17),rgb(50,50,50),rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {
  .c5:focus-within::after,
  .c5:focus::after {
    border-color: #007dfa3C;
  }
}

@media (prefers-color-scheme:dark) {
  .c5 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:focus,
  .c5:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:active {
    background-color: #003965;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:disabled {
    background-color: #595959;
    color: #a9a9a9;
  }
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

<div>
  <div
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <h1
        class="c2 c3"
      >
        Support
      </h1>
    </div>
    <div
      class="c4"
    >
      <button
        class="c5 outer"
        disabled=""
        type="button"
      >
        <span
          class="c6"
        >
          Reload
        </span>
      </button>
    </div>
    <div
      class="c7 support__body-skeleton"
    >
      <div
        class="c8"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Support /> should render correctly when loading 1`] = `
.c2 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c7 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 100%;
  height: 10rem;
  margin-bottom: 1.2rem;
}

.c8 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg,rgb(238,238,238),rgb(245,245,245),rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: eflhBg 3.5s ease-in-out infinite;
  animation: eflhBg 3.5s ease-in-out infinite;
}

.c3 {
  margin: 2.3rem 0 0 0;
}

.c1 {
  -webkit-animation: eTsntO 0.4s ease-in-out;
  animation: eTsntO 0.4s ease-in-out;
}

.c5 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
  cursor: default;
}

.c5:focus-within,
.c5:focus {
  outline: none !important;
}

.c5:focus-within::after,
.c5:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #007dfa3C 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c5:focus,
.c5:hover {
  background-color: #004F8C;
  color: white;
}

.c5:active {
  background-color: #003E6F;
  color: white;
}

.c5:disabled {
  background-color: #cdcdd7;
  color: #646464;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  padding-bottom: 2rem;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c4 {
  width: 100%;
  margin-top: 2rem;
  margin-bottom: 1rem;
}

@media (prefers-color-scheme:dark) {
  .c7 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c8 {
    background-image: linear-gradient( 90deg,rgb(17,17,17),rgb(50,50,50),rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c5:focus-within::after,
  .c5:focus::after {
    border-color: #007dfa3C;
  }
}

@media (prefers-color-scheme:dark) {
  .c5 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:focus,
  .c5:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:active {
    background-color: #003965;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:disabled {
    background-color: #595959;
    color: #a9a9a9;
  }
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

<div>
  <div
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <h1
        class="c2 c3"
      >
        Support
      </h1>
    </div>
    <div
      class="c4"
    >
      <button
        class="c5 outer"
        disabled=""
        type="button"
      >
        <span
          class="c6"
        >
          Reload
        </span>
      </button>
    </div>
    <div
      class="c7 support__body-skeleton"
    >
      <div
        class="c8"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Support /> should render correctly with admin 1`] = `
.c2 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c10 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c9 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11 {
  margin: 3.34rem 0 0 0;
}

.c7 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 100%;
  height: 10rem;
  margin-bottom: 1.2rem;
}

.c8 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg,rgb(238,238,238),rgb(245,245,245),rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: eflhBg 3.5s ease-in-out infinite;
  animation: eflhBg 3.5s ease-in-out infinite;
}

.c3 {
  margin: 2.3rem 0 0 0;
}

.c1 {
  -webkit-animation: eTsntO 0.4s ease-in-out;
  animation: eTsntO 0.4s ease-in-out;
}

.c5 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c5:focus-within,
.c5:focus {
  outline: none !important;
}

.c5:focus-within::after,
.c5:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #007dfa3C 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c5:focus,
.c5:hover {
  background-color: #004F8C;
  color: white;
}

.c5:active {
  background-color: #003E6F;
  color: white;
}

.c5:disabled {
  background-color: #cdcdd7;
  color: #646464;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  padding-bottom: 2rem;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c4 {
  width: 100%;
  margin-top: 2rem;
  margin-bottom: 1rem;
}

@media (prefers-color-scheme:dark) {
  .c9 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c7 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c8 {
    background-image: linear-gradient( 90deg,rgb(17,17,17),rgb(50,50,50),rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c5:focus-within::after,
  .c5:focus::after {
    border-color: #007dfa3C;
  }
}

@media (prefers-color-scheme:dark) {
  .c5 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:focus,
  .c5:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:active {
    background-color: #003965;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:disabled {
    background-color: #595959;
    color: #a9a9a9;
  }
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

<div>
  <div
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <h1
        class="c2 c3"
      >
        Support
      </h1>
    </div>
    <div
      class="c4"
    >
      <button
        class="c5 outer"
        type="button"
      >
        <span
          class="c6"
        >
          Reload
        </span>
      </button>
    </div>
    <div
      class="c7 support__body-skeleton"
    >
      <div
        class="c8"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c9"
    >
      <h1
        class="c10 c11"
        id="add-link"
      >
        ADD LINK
      </h1>
      <div>
        SUPPORT_FORM
      </div>
    </div>
  </div>
</div>
`;

exports[`<Support /> should render correctly with admin and createLinkError 1`] = `
.c2 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c10 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c9 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11 {
  margin: 3.34rem 0 0 0;
}

.c7 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 100%;
  height: 10rem;
  margin-bottom: 1.2rem;
}

.c8 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg,rgb(238,238,238),rgb(245,245,245),rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: eflhBg 3.5s ease-in-out infinite;
  animation: eflhBg 3.5s ease-in-out infinite;
}

.c3 {
  margin: 2.3rem 0 0 0;
}

.c1 {
  -webkit-animation: eTsntO 0.4s ease-in-out;
  animation: eTsntO 0.4s ease-in-out;
}

.c5 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c5:focus-within,
.c5:focus {
  outline: none !important;
}

.c5:focus-within::after,
.c5:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #007dfa3C 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c5:focus,
.c5:hover {
  background-color: #004F8C;
  color: white;
}

.c5:active {
  background-color: #003E6F;
  color: white;
}

.c5:disabled {
  background-color: #cdcdd7;
  color: #646464;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c12 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c12:first-of-type {
  margin-top: 0.86rem;
}

.c13 {
  color: #E02626;
  fill: #E02626;
}

.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  padding-bottom: 2rem;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c4 {
  width: 100%;
  margin-top: 2rem;
  margin-bottom: 1rem;
}

@media (prefers-color-scheme:dark) {
  .c9 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c7 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c8 {
    background-image: linear-gradient( 90deg,rgb(17,17,17),rgb(50,50,50),rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c5:focus-within::after,
  .c5:focus::after {
    border-color: #007dfa3C;
  }
}

@media (prefers-color-scheme:dark) {
  .c5 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:focus,
  .c5:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:active {
    background-color: #003965;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:disabled {
    background-color: #595959;
    color: #a9a9a9;
  }
}

@media (prefers-color-scheme:dark) {
  .c13 {
    color: #CA2020;
    fill: #CA2020;
  }
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

<div>
  <div
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <h1
        class="c2 c3"
      >
        Support
      </h1>
    </div>
    <div
      class="c4"
    >
      <button
        class="c5 outer"
        type="button"
      >
        <span
          class="c6"
        >
          Reload
        </span>
      </button>
    </div>
    <div
      class="c7 support__body-skeleton"
    >
      <div
        class="c8"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c9"
    >
      <h1
        class="c10 c11"
        id="add-link"
      >
        ADD LINK
      </h1>
      <span
        class="c12"
      >
        <span
          class="c13"
        >
          Failed to add link
          <br />
          Error creating link
        </span>
      </span>
      <div>
        SUPPORT_FORM
      </div>
    </div>
  </div>
</div>
`;

exports[`<Support /> should render correctly with admin and deleteLinkError 1`] = `
.c2 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c10 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c9 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11 {
  margin: 3.34rem 0 0 0;
}

.c7 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 100%;
  height: 10rem;
  margin-bottom: 1.2rem;
}

.c8 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg,rgb(238,238,238),rgb(245,245,245),rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: eflhBg 3.5s ease-in-out infinite;
  animation: eflhBg 3.5s ease-in-out infinite;
}

.c3 {
  margin: 2.3rem 0 0 0;
}

.c1 {
  -webkit-animation: eTsntO 0.4s ease-in-out;
  animation: eTsntO 0.4s ease-in-out;
}

.c5 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c5:focus-within,
.c5:focus {
  outline: none !important;
}

.c5:focus-within::after,
.c5:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #007dfa3C 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c5:focus,
.c5:hover {
  background-color: #004F8C;
  color: white;
}

.c5:active {
  background-color: #003E6F;
  color: white;
}

.c5:disabled {
  background-color: #cdcdd7;
  color: #646464;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c12 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c12:first-of-type {
  margin-top: 0.86rem;
}

.c13 {
  color: #E02626;
  fill: #E02626;
}

.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  padding-bottom: 2rem;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c4 {
  width: 100%;
  margin-top: 2rem;
  margin-bottom: 1rem;
}

@media (prefers-color-scheme:dark) {
  .c9 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c7 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c8 {
    background-image: linear-gradient( 90deg,rgb(17,17,17),rgb(50,50,50),rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c5:focus-within::after,
  .c5:focus::after {
    border-color: #007dfa3C;
  }
}

@media (prefers-color-scheme:dark) {
  .c5 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:focus,
  .c5:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:active {
    background-color: #003965;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:disabled {
    background-color: #595959;
    color: #a9a9a9;
  }
}

@media (prefers-color-scheme:dark) {
  .c13 {
    color: #CA2020;
    fill: #CA2020;
  }
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

<div>
  <div
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <h1
        class="c2 c3"
      >
        Support
      </h1>
    </div>
    <div
      class="c4"
    >
      <button
        class="c5 outer"
        type="button"
      >
        <span
          class="c6"
        >
          Reload
        </span>
      </button>
    </div>
    <div
      class="c7 support__body-skeleton"
    >
      <div
        class="c8"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c9"
    >
      <h1
        class="c10 c11"
        id="add-link"
      >
        ADD LINK
      </h1>
      <span
        class="c12"
      >
        <span
          class="c13"
        >
          Failed to delete link
          <br />
          Error deleting link
        </span>
      </span>
      <div>
        SUPPORT_FORM
      </div>
    </div>
  </div>
</div>
`;

exports[`<Support /> should render correctly with initial state 1`] = `
.c2 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c7 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 100%;
  height: 10rem;
  margin-bottom: 1.2rem;
}

.c8 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg,rgb(238,238,238),rgb(245,245,245),rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: eflhBg 3.5s ease-in-out infinite;
  animation: eflhBg 3.5s ease-in-out infinite;
}

.c3 {
  margin: 2.3rem 0 0 0;
}

.c1 {
  -webkit-animation: eTsntO 0.4s ease-in-out;
  animation: eTsntO 0.4s ease-in-out;
}

.c5 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c5:focus-within,
.c5:focus {
  outline: none !important;
}

.c5:focus-within::after,
.c5:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #007dfa3C 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c5:focus,
.c5:hover {
  background-color: #004F8C;
  color: white;
}

.c5:active {
  background-color: #003E6F;
  color: white;
}

.c5:disabled {
  background-color: #cdcdd7;
  color: #646464;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  padding-bottom: 2rem;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c4 {
  width: 100%;
  margin-top: 2rem;
  margin-bottom: 1rem;
}

@media (prefers-color-scheme:dark) {
  .c7 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c8 {
    background-image: linear-gradient( 90deg,rgb(17,17,17),rgb(50,50,50),rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c5:focus-within::after,
  .c5:focus::after {
    border-color: #007dfa3C;
  }
}

@media (prefers-color-scheme:dark) {
  .c5 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:focus,
  .c5:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:active {
    background-color: #003965;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:disabled {
    background-color: #595959;
    color: #a9a9a9;
  }
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

<div>
  <div
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <h1
        class="c2 c3"
      >
        Support
      </h1>
    </div>
    <div
      class="c4"
    >
      <button
        class="c5 outer"
        type="button"
      >
        <span
          class="c6"
        >
          Reload
        </span>
      </button>
    </div>
    <div
      class="c7 support__body-skeleton"
    >
      <div
        class="c8"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Support /> should render correctly with links 1`] = `
.c2 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c8 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c13 {
  margin: 0;
}

.c15 {
  width: 1.25rem;
  height: 1.25rem;
}

.c12 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: #9932cc;
  fill: #9932cc;
}

.c12:focus-within,
.c12:focus {
  position: relative;
  outline: none !important;
}

.c12:focus-within::after,
.c12:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #007dfa3C 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c12:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 0.4rem;
  height: 1rem;
  margin-left: 0.55rem;
}

.c16 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  margin-top: 0.12rem;
  margin-left: -0.45rem;
}

.c7 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9 {
  margin: 2.13rem 0 0 0;
}

.c3 {
  margin: 2.3rem 0 0 0;
}

.c1 {
  -webkit-animation: eTsntO 0.4s ease-in-out;
  animation: eTsntO 0.4s ease-in-out;
}

.c5 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c5:focus-within,
.c5:focus {
  outline: none !important;
}

.c5:focus-within::after,
.c5:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #007dfa3C 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c5:focus,
.c5:hover {
  background-color: #004F8C;
  color: white;
}

.c5:active {
  background-color: #003E6F;
  color: white;
}

.c5:disabled {
  background-color: #cdcdd7;
  color: #646464;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c10:first-of-type {
  margin-top: 0.86rem;
}

.c11 {
  display: inline-block;
  width: 100%;
  margin-bottom: 1rem;
}

.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  padding-bottom: 2rem;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c4 {
  width: 100%;
  margin-top: 2rem;
  margin-bottom: 1rem;
}

@media (prefers-color-scheme:dark) {
  .c12:focus-within::after,
  .c12:focus::after {
    border-color: #007dfa3C;
  }
}

@media (prefers-color-scheme:dark) {
  .c12 {
    color: #da70d6;
    fill: #da70d6;
  }

  .c12:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

@media (prefers-color-scheme:dark) {
  .c7 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:focus-within::after,
  .c5:focus::after {
    border-color: #007dfa3C;
  }
}

@media (prefers-color-scheme:dark) {
  .c5 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:focus,
  .c5:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:active {
    background-color: #003965;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:disabled {
    background-color: #595959;
    color: #a9a9a9;
  }
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

<div>
  <div
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <h1
        class="c2 c3"
      >
        Support
      </h1>
    </div>
    <div
      class="c4"
    >
      <button
        class="c5 outer"
        type="button"
      >
        <span
          class="c6"
        >
          Reload
        </span>
      </button>
    </div>
    <div
      class="c7"
    >
      <h1
        class="c8 c9"
        id="name-1"
      >
        name 1
      </h1>
      <span
        class="c10 c11"
      >
        <a
          aria-label="URL_1 (opens in a new tab)"
          class="c12"
          href="URL_1"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c13"
          >
            URL_1
          </span>
          <div
            class="c14"
          >
            <svg
              class="c15 c16"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        <br />
        description 1
      </span>
    </div>
    <div
      class="c7"
    >
      <h1
        class="c8 c9"
        id="name-2"
      >
        name 2
      </h1>
      <span
        class="c10 c11"
      >
        <a
          aria-label="URL_2 (opens in a new tab)"
          class="c12"
          href="URL_2"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c13"
          >
            URL_2
          </span>
          <div
            class="c14"
          >
            <svg
              class="c15 c16"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        <br />
        description 2
      </span>
    </div>
  </div>
</div>
`;

exports[`<Support /> should render correctly with loadError 1`] = `
.c2 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c9 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 100%;
  height: 10rem;
  margin-bottom: 1.2rem;
}

.c10 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg,rgb(238,238,238),rgb(245,245,245),rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: eflhBg 3.5s ease-in-out infinite;
  animation: eflhBg 3.5s ease-in-out infinite;
}

.c3 {
  margin: 2.3rem 0 0 0;
}

.c1 {
  -webkit-animation: eTsntO 0.4s ease-in-out;
  animation: eTsntO 0.4s ease-in-out;
}

.c5 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
}

.c5:focus-within,
.c5:focus {
  outline: none !important;
}

.c5:focus-within::after,
.c5:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #007dfa3C 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c5:focus,
.c5:hover {
  background-color: #004F8C;
  color: white;
}

.c5:active {
  background-color: #003E6F;
  color: white;
}

.c5:disabled {
  background-color: #cdcdd7;
  color: #646464;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c7:first-of-type {
  margin-top: 0.86rem;
}

.c8 {
  color: #E02626;
  fill: #E02626;
}

.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  padding-bottom: 2rem;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c4 {
  width: 100%;
  margin-top: 2rem;
  margin-bottom: 1rem;
}

@media (prefers-color-scheme:dark) {
  .c9 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c10 {
    background-image: linear-gradient( 90deg,rgb(17,17,17),rgb(50,50,50),rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c5:focus-within::after,
  .c5:focus::after {
    border-color: #007dfa3C;
  }
}

@media (prefers-color-scheme:dark) {
  .c5 {
    background-color: #025CA2;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:focus,
  .c5:hover {
    background-color: #004479;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:active {
    background-color: #003965;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:disabled {
    background-color: #595959;
    color: #a9a9a9;
  }
}

@media (prefers-color-scheme:dark) {
  .c8 {
    color: #CA2020;
    fill: #CA2020;
  }
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

<div>
  <div
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <h1
        class="c2 c3"
      >
        Support
      </h1>
    </div>
    <div
      class="c4"
    >
      <button
        class="c5 outer"
        type="button"
      >
        <span
          class="c6"
        >
          Reload
        </span>
      </button>
    </div>
    <span
      class="c7"
    >
      <span
        class="c8"
      >
        The support session failed to load
        <br />
        some error message
      </span>
    </span>
    <div
      class="c9 support__body-skeleton"
    >
      <div
        class="c10"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;
